--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Incresol Mail Status Tracker</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
@@ -12,7 +13,7 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
+        src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
             "com.incresol.sendgridfrontendapplication": "./"
