--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Incresol Mail Status Tracker</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <style>
         html, body, body > div, #container, #container-uiarea {
@@ -15,6 +16,7 @@
         id="sap-ui-bootstrap"
         src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
+        data-sap-ui-libs="sap.m, sap.ui.layout, sap.tnt"
         data-sap-ui-resourceroots='{
             "com.incresol.sendgridfrontendapplication": "./"
         }'
